SKILIKS-4313. Fix SC jumping.

--- a/protected/assets/less/simulation.less
+++ b/protected/assets/less/simulation.less
@@ -55,7 +55,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 105%;
+  height: 101%; /* 101% - for IE10 */
   background-color: #000;
   opacity: 0.3;
   z-index: 1;
@@ -177,6 +177,7 @@ body {
                   background: url('../img/window-title-dots.png') 2px 0, -o-linear-gradient(top, #5e5e5e, #2e2d2d);
                   background: url('../img/window-title-dots.png') 2px 0, -ms-linear-gradient(top, #5e5e5e, #2e2d2d);
                   background: url('../img/window-title-dots.png') 2px 0, linear-gradient(top, #5e5e5e, #2e2d2d);
+
                   ul.button_menu{
                     position: absolute;
                     float: left;
@@ -220,7 +221,6 @@ body {
                     display: table;
                     position: absolute;
                     margin-top: 25px;
-
 
                     li {
                       //position: absolute;
